# .spark

./: .bashrc  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
tests/: test_container.py  test_container_edge_cases.py
