[project]
name = "spark-dev"
version = "0.1.0"
description = "My Spark development environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.2.0",
  "findspark>=2.0.1",
  "jupyter>=1.1.1",
  "notebook>=7.3.2",
  "pyspark>=3.5.4",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.9.6",
]
